Fixing contrasting issues

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -70,7 +70,7 @@ nav {
 
 #menu::before {
 	content: "☰";
-    /* color: var(--primary-color); */
+    color: var(--primary-color);
 }
 
 #menu.open::before {
